--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.1",
         "ext-zip": "*",
         "automattic/woocommerce": "^3.1",
+        "beyondcode/laravel-websockets": "^1.14",
         "doctrine/dbal": "^3.0",
         "gladcodes/keygen": "^2.0.0-alpha",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -27,6 +28,7 @@
         "milon/barcode": "^10.0",
         "nwidart/laravel-modules": "^8.3",
         "paydunya/paydunya": "^1.0",
+        "pusher/pusher-php-server": "^7.2",
         "salla/zatca": "^2.0",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^5.8",
