--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "srmklive/paypal": "^3.0",
         "stancl/tenancy": "^3.7",
         "stripe/stripe-php": "^7.57",
-        "twilio/sdk": "^6.10"
+        "twilio/sdk": "^6.10",
+        "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
