--- a/public/app/manifest.json
+++ b/public/app/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "poslix_digital_menu",
-    "short_name": "poslix_digital_menu",
+    "name": "Poslix Digital Menu",
+    "short_name": "Digital Menu",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Poslix Digital Menu",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
