--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "automattic/woocommerce": "^3.1",
         "beyondcode/laravel-websockets": "^1.14",
         "doctrine/dbal": "^3.0",
+        "firebase/php-jwt": "^6.10",
         "gladcodes/keygen": "^2.0.0-alpha",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
@@ -36,8 +37,7 @@
         "srmklive/paypal": "^3.0",
         "stancl/tenancy": "^3.7",
         "stripe/stripe-php": "^7.57",
-        "twilio/sdk": "^6.10",
-        "tymon/jwt-auth": "^2.1"
+        "twilio/sdk": "^6.10"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
